# mlops-template

./: .pre-commit-config.yaml  README.md  config-infra-prod.yml  environment.yml  pyproject.toml
environment/: train-conda.yml
mlops/azureml/deploy/batch/: batch-deployment.yml  batch-endpoint.yml
mlops/azureml/deploy/online/: online-deployment.yml  online-endpoint.yml  score.py
mlops/azureml/train/: data.yml  pipeline.yml  train-env.yml
src/: evaluate.py  prep.py  register.py  train.py
