[tool.poetry]
name = "mlops-template"
version = "0.1.0"
description = "MLOps template project"
authors = ["Hanna Bodnar <hanna@politheon.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
azure-ai-ml = "*"
azure-cli = "*"
azure-storage-blob = ">=12.10.0"
azure-storage-file-share = ">=12.5.0"
azure-storage-queue = ">=12.3.0"
azure-storage-file-datalake = ">=12.2.0"
azureml-mlflow = "*"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"
joblib = "*"
pyarrow = "*"

[tool.poetry.group.dev.dependencies]
pre-commit = "2.19.0"
black = "22.3.0"
flake8 = "4.0.1"
isort = "5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
